
-------------------------------------------------------------------------------

Thu Sep 30 22:36:37 PDT 1999
(Mandrake)

added KDE Support config dialog


-------------------------------------------------------------------------------

Thu Sep 30 23:05:53 PDT 1999
(Mandrake)

updated TODO - removed two items, added one

-------------------------------------------------------------------------------

Thu Sep 30 23:07:48 PDT 1999
(Raster)

flim! :)

-------------------------------------------------------------------------------

Fri Oct  1 01:16:46 PDT 1999
(Raster)

fix windowmatch border sige-effect for starting the firts time

fix start/restart/logout on multihead 

-------------------------------------------------------------------------------

Fri Oct  1 01:32:30 PDT 1999
(Raster)

add bug i noticed to TODO

-------------------------------------------------------------------------------

Fri Oct  1 10:50:59 PDT 1999
(Raster)

fixed minor pager sel windo resize problem...

-------------------------------------------------------------------------------

Fri Oct  1 11:08:10 PDT 1999
(Mandrake)

fixed the bug where remembering any state BESIDES location on a dialog window
would cause it to pop up at -20, -20

-------------------------------------------------------------------------------

Fri Oct  1 11:09:35 PDT 1999
(Raster)

patch for label in settings dialog

-------------------------------------------------------------------------------

Fri Oct  1 12:10:25 PDT 1999
(Raster)

new mantinence submenu form deksktop menu

-------------------------------------------------------------------------------

Fri Oct  1 12:52:19 PDT 1999
(Mandrake)

fixed the bug in dox, removed from TODO list.

-------------------------------------------------------------------------------

Fri Oct  1 13:35:50 PDT 1999
(Mandrake)

wrote some code for "first time initialization" cruft.
should generate the user menus in ~/.enlightenment, as well as run dox for the
first time.