@@ -2660,3 +2660,10 @@ Fri Oct  1 13:35:50 PDT 1999
 wrote some code for "first time initialization" cruft.
 should generate the user menus in ~/.enlightenment, as well as run dox for the
 first time.
+
+-------------------------------------------------------------------------------
+
+Fri Oct  1 15:08:47 PDT 1999
+(Raster)
+
+reload_menus segv fixed :)
